--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 header{
-	display: in-block;
+	display: block;
 	color: white;
 
-	padding: 14px 16px;
+	padding: 14px ;
 	text-decoration: none;
 }
 
@@ -22,9 +22,67 @@ body{
 }
 
 
+.topnav:last-child {
+    border-right: none;
+  }
+  
+.topnav a {
+    display: in-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+.topnav a:hover:not(.active) {
+    background-color: rgba(245, 149, 24, 0.555);
+  }
+  
+  .active {
+    background-color: #4CAF50;
+  }
+
+.topnav{
+	margin: 1px;
+	padding: 1px;
+	overflow: hidden;
+	background-color: #333;
+	text-align: center;
+	font-family: arial;
+	color: #7b899e;
+
+	
+  }
+
+.topnav .icon {
+    display: none;
+  }
+
 footer{
 	display: in-block;
 	color: white;
 	padding: 14px 16px;
 	text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
