--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,129 @@
-header{
-	display: block;
-	color: white;
+header {
+  display: inline;
 
-	padding: 14px ;
-	text-decoration: none;
+}
+  
+
+body {
+
+  font-size: 100%;
+  line-height: 26px;
+  background-color: #ffffffa6;
+  background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
 }
 
-body{
-	border: 5px soild;
-	border-color: FFFFFF;
-	border-width: 9x;
-	font-family: "ff-meta-web-pro", sans-serif;
-    font-size: 100%;
-	line-height: 26px;
-	background: #1277fbdc;
-	color: #ffffff;
-	text-decoration:none;
-
-
-	
+a {
+  text-decoration: none;
+  font-family: "ff-meta-web-pro", sans-serif;
 }
 
+a:visited {
+  color: rgb(0, 0, 0);
+}
+
+h1{text-align: center;}
+
+.container {
+  position: relative;
+
+}
+
+
+
+.welcomeText {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(0, 0, 0, 0.267);
+  padding-left: 20px;
+  padding-right: 20px;
+  color: rgb(255, 255, 255);
+  
+}
+.welcomeText a{color: rgb(255, 255, 255);}
 
 .topnav:last-child {
-    border-right: none;
-  }
-  
-.topnav a {
-    display: in-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-.topnav a:hover:not(.active) {
-    background-color: rgba(245, 149, 24, 0.555);
-  }
-  
-  .active {
-    background-color: #4CAF50;
-  }
-
-.topnav{
-	margin: 1px;
-	padding: 1px;
-	overflow: hidden;
-	background-color: #333;
-	text-align: center;
-	font-family: arial;
-	color: #7b899e;
-
-	
-  }
-
-.topnav .icon {
-    display: none;
-  }
-
-footer{
-	display: in-block;
-	color: white;
-	padding: 14px 16px;
-	text-decoration: none;
+  border-right: none;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
+.topnav a {
+  display: in-block;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover:not(.active) {
+  background-color: rgba(245, 149, 24, 0.555);
+}
+
+.active {
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+}
+
+#logo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
+
+.topnav {
+  margin: 1px;
+  padding: 1px;
+  width: auto;
+  overflow: hidden;
+  text-align: center;
+  color: #9399a1;
+  background-color: rgba(142, 142, 143, 0.061);
+}
+
+.topnav .icon {
+  display: none;
+}
+
+footer {
+  display:block;
+
+  text-decoration: none;
+}
+
+@media screen and (max-width: 653px) and (min-height:400px) {
+  .topnav a:not(:first-child) {
+    display: none;
   }
+  .topnav {
+    background-color: rgba(51, 51, 51, 0.219);
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .welcomeText {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+ 
+    color: rgb(255, 255, 255);
+    
+  }
+}
+
+
+@media screen and (max-width: 653px) and (min-height:400px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
