new media queris and data coloums in table.

--- a/css/style.css
+++ b/css/style.css
@@ -126,4 +126,16 @@ footer {
     display: block;
     text-align: left;
   }
+
+  table{
+    border-collapse: collapse;
+    border-spacing: 100;
+    width: 100%;
+    overflow-x:auto;
+    vertical-align: bottom;
+
+
+
+  }
+
 }
