--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,12 @@
 header {
   display: inline;
-
 }
-  
 
 body {
-
   font-size: 100%;
   line-height: 26px;
   background-color: #ffffffa6;
   background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-
 }
 
 a {
@@ -22,14 +18,13 @@ a:visited {
   color: rgb(0, 0, 0);
 }
 
-h1{text-align: center;}
+h1 {
+  text-align: center;
+}
 
 .container {
   position: relative;
-
 }
-
-
 
 .welcomeText {
   position: absolute;
@@ -39,9 +34,11 @@ h1{text-align: center;}
   padding-left: 20px;
   padding-right: 20px;
   color: rgb(255, 255, 255);
-  
 }
-.welcomeText a{color: rgb(255, 255, 255);}
+
+.welcomeText a {
+  color: rgb(255, 255, 255);
+}
 
 .topnav:last-child {
   border-right: none;
@@ -59,11 +56,7 @@ h1{text-align: center;}
   background-color: rgba(245, 149, 24, 0.555);
 }
 
-.active {
-  
-}
-
-#logo{
+#logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -85,9 +78,20 @@ h1{text-align: center;}
 }
 
 footer {
-  display:block;
-
+  display: block;
   text-decoration: none;
+}
+
+#aboutusimage1{
+    float: right;    
+    margin: 0 0 0 15px;
+    
+}
+
+#aboutusimage2{
+  float: left;    
+  margin:0 15px 0 0;
+  
 }
 
 @media screen and (max-width: 653px) and (min-height:400px) {
@@ -105,14 +109,8 @@ footer {
     position: absolute;
     bottom: 0px;
     right: 0px;
- 
     color: rgb(255, 255, 255);
-    
   }
-}
-
-
-@media screen and (max-width: 653px) and (min-height:400px) {
   .topnav.responsive {
     position: relative;
   }
@@ -126,16 +124,19 @@ footer {
     display: block;
     text-align: left;
   }
+  table {
 
-  table{
-    border-collapse: collapse;
-    border-spacing: 100;
     width: 100%;
-    overflow-x:auto;
-    vertical-align: bottom;
 
+  }
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
 
-
+  .aboutusimage{
+    width: 50%;
+    height: 50%;
   }
 
 }
