--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ table{
 th, td {
   text-align: left;
   padding: 8px;
+  
 }
 
 .topnav {
@@ -134,6 +135,16 @@ footer {
   height: 100%;
 }
 
+#horrorElement{
+  width: 10%;
+  height: 10%;
+
+}
+
+#horrorImg{
+  width: 300%;
+  height: 100%;
+}
 
 @media screen and (max-width: 653px) and (min-height:400px) {
   .topnav a:not(:first-child) {
