--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,14 @@ footer {
   float: right;
 }
 
+#newAjexSearch{
+  float: right;
+}
+
+#newAjexSearchSubmit{
+  float: right;
+}
+
 #programmingElement{
   width: 10%;
   height: 10%;
