--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ h1 {
 .welcomeText {
   position: absolute;
   bottom: 20px;
-  right: 20px;
   background-color: rgba(0, 0, 0, 0.267);
   padding-left: 20px;
   padding-right: 20px;
@@ -71,10 +70,8 @@ table{
   table-layout: auto;
   width: auto;
   overflow-x:auto;
-  display: inline-table;
+  display: table;
 
-
-  
 }
 
 th, td {
@@ -289,6 +286,13 @@ footer {
     background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
     margin: auto;
   }
+
+  .refreshtip .tooltiptext {
+    width: 49px;
+    font-size: 50%;
+  }
+
+
 
   th, td {
     text-align: left;
